--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,11 +1,8 @@
-sentence-transformers==2.2.2
-langchain
-flask
-pypdf
-python-dotenv
-pinecone[grpc]
-langchain-pinecone
-langchain_community
-langchain_google_genai
-langchain_experimental
+sentence-transformers=4.0.1
+flask=3.1.0
+pypdf=5.4.0
+python-dotenv=1.1.0
+langchain-pinecone=0.2.3
+langchain_community=0.3.20
+langchain_google_genai=2.1.2
 -e .
